Try to reduce some warnings

--- a/gradle.properties
+++ b/gradle.properties
@@ -59,6 +59,8 @@ kotlin.mpp.stability.nowarn=true
 
 kotlin.native.ignoreIncorrectDependencies=true
 kotlin.native.ignoreDisabledTargets=true
+#kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 
 #org.gradle.caching=true
 
