--- a/korge-reload-agent/build.gradle
+++ b/korge-reload-agent/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    //id "kotlin" version "1.6.21"
     id "kotlin"
     //id "org.jetbrains.kotlin.jvm"
     id "maven-publish"
@@ -22,8 +23,8 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
         jvmTarget = "1.8"
         sourceCompatibility = "1.8"
-        apiVersion = "1.4"
-        languageVersion = "1.4"
+        apiVersion = "1.6"
+        languageVersion = "1.6"
         suppressWarnings = true
         //jvmTarget = "1.6"
     }
