--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -87,7 +87,7 @@ jobs:
     - { name: Start gradle, run: ./gradlew }
     - { name: Testing JVM, run: ./gradlew jvmTest }
     - { name: Check sandbox compiles, run: "./gradlew :korge-sandbox:jvmJar" }
-    - { name: Publish to maven local, run: ./gradlew publishJvmLocal }
+    - { name: Publish to maven local, run: ./gradlew publishJvmPublicationToMavenLocal }
     - { name: e2e test, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesJvm } }
 
   test-coverage:
