--- a/gradle.properties
+++ b/gradle.properties
@@ -60,7 +60,7 @@ kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreIncorrectDependencies=true
 kotlin.native.ignoreDisabledTargets=true
 
-#org.gradle.caching=true
+org.gradle.caching=true
 
 #org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
