--- a/kds/build.gradle
+++ b/kds/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 //com.soywiz.korge.gradle.generate.TemplateGenerator.synchronize(new File(projectDir, "template"))
 
 def doGenerateKdsTemplates() {
-    com.soywiz.korge.gradle.generate.TemplateGenerator.synchronizeNew(new File(projectDir, "src/commonMain/kotlin/com/soywiz/kds/Deque.kt"))
+    com.soywiz.korge.gradle.generate.TemplateGenerator.synchronizeNew(new File(projectDir, "src/commonMain/kotlin/com/soywiz/kds/Deque.kt"), true, true, true, true, true, true, true, false)
     com.soywiz.korge.gradle.generate.TemplateGenerator.synchronizeNew(new File(projectDir, "src/commonMain/kotlin/com/soywiz/kds/Array2.kt"), true, true, true, true, true, true, true, true)
     com.soywiz.korge.gradle.generate.TemplateGenerator.synchronizeNew(new File(projectDir, "src/commonMain/kotlin/com/soywiz/kds/Stack.kt"), false)
 }
