--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -14,8 +14,10 @@ if (System.getProperty("java.version").startsWith("1.8") || System.getProperty("
 }
 
 dependencies {
+    implementation("org.jetbrains.kotlinx:kover:0.6.1")
     implementation("com.android.tools.build:gradle:$androidBuildGradleVersion")
     implementation("org.jetbrains.kotlin:kotlin-gradle-plugin:${libs.versions.kotlin.get()}")
+
     implementation(libs.proguard.gradle)
     implementation(libs.closure.compiler)
     implementation(libs.gson)
