--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -22,12 +22,14 @@ dependencies {
     implementation(libs.proguard.gradle)
     implementation(libs.closure.compiler)
     implementation(libs.gson)
+    implementation(libs.gradle.publish.plugin)
 }
 
 repositories {
     mavenLocal()
     mavenCentral()
     google()
+    maven { url = uri("https://plugins.gradle.org/m2/") }
     if (kotlinVersion.contains("eap") || kotlinVersion.contains("-")) {
         maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/temporary") }
         maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev") }
