--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -14,10 +14,10 @@ if (System.getProperty("java.version").startsWith("1.8") || System.getProperty("
 }
 
 dependencies {
-    implementation("org.jetbrains.kotlinx:kover:0.6.1")
-    implementation("org.jetbrains.dokka:dokka-gradle-plugin:1.7.20")
-    implementation("com.android.tools.build:gradle:$androidBuildGradleVersion")
-    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin:${libs.versions.kotlin.get()}")
+    implementation(libs.kover)
+    implementation(libs.dokka)
+    implementation(libs.android.build.gradle)
+    implementation(libs.kotlin.gradle.plugin)
 
     implementation(libs.proguard.gradle)
     implementation(libs.closure.compiler)
