--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,9 +3,12 @@ jna = "5.13.0"
 jcodec = "0.2.5"
 proguard-gradle = "7.2.2"
 kotlin = "1.7.21"
+dokka = "1.7.20"
 kotlinx-coroutines = "1.6.4"
 kotlinx-serialization = "1.4.1"
 kotlinx-atomicfu = "0.18.5"
+kover = "0.6.1"
+kover-agent = "1.0.692"
 node = "16.9.1"
 android-build-gradle = "7.0.4"
 gson = "2.8.6"
@@ -13,9 +16,12 @@ gson = "2.8.6"
 gradle-publish-plugin = "0.14.0"
 closure-compiler = "v20210808"
 # https://repo.maven.apache.org/maven2/org/jetbrains/intellij/deps/intellij-coverage-agent/
-kover-agent = "1.0.692"
 
 [libraries]
+kotlin-serialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
+kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+dokka = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "dokka" }
+kover = { module = "org.jetbrains.kotlinx:kover", version.ref = "kover" }
 kover-intellij-agent = { module = "org.jetbrains.intellij.deps:intellij-coverage-agent", version.ref = "kover-agent" }
 jna-core = { module = "net.java.dev.jna:jna", version.ref = "jna" }
 jna-platform = { module = "net.java.dev.jna:jna-platform", version.ref = "jna" }
