--- a/korge-gradle-plugin/build.gradle
+++ b/korge-gradle-plugin/build.gradle
@@ -72,16 +72,18 @@ com.soywiz.korlibs.NativeTools.groovyConfigurePublishing(project, false)
 com.soywiz.korlibs.NativeTools.groovyConfigureSigning(project)
 
 dependencies {
-    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin")
-    implementation("org.jetbrains.kotlin:kotlin-serialization")
-
-    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin")
+    implementation(libs.kotlin.gradle.plugin)
+    implementation(libs.kotlin.serialization)
 
     implementation(libs.proguard.gradle)
     implementation(libs.closure.compiler)
     implementation(libs.gson)
+    implementation(libs.gradle.publish.plugin)
 
-    implementation("com.android.tools.build:gradle:${libs.versions.android.build.gradle.get()}")
+    implementation(libs.kover)
+    implementation(libs.dokka)
+
+    implementation(libs.android.build.gradle)
 
 	implementation(gradleApi())
 	implementation(localGroovy())
