Move build.gradle*.kts code into buildSrc (#1202)

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -6,25 +6,27 @@ plugins {
 }
 
 def kotlinVersion = libs.versions.kotlin.get()
-def androidBuildGradleVersion
-if (System.getProperty("java.version").startsWith("1.8") || System.getProperty("java.version").startsWith("9")) {
-    androidBuildGradleVersion = "4.2.0"
-} else {
-    androidBuildGradleVersion = libs.versions.android.build.gradle.get()
-}
 
 dependencies {
-    implementation("com.android.tools.build:gradle:$androidBuildGradleVersion")
-    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin:${libs.versions.kotlin.get()}")
+    implementation(libs.kover)
+    implementation(libs.dokka)
     implementation(libs.proguard.gradle)
     implementation(libs.closure.compiler)
     implementation(libs.gson)
+    implementation(libs.gradle.publish.plugin)
+    implementation(libs.kotlin.gradle.plugin)
+    if (System.getProperty("java.version").startsWith("1.8") || System.getProperty("java.version").startsWith("9")) {
+        implementation(libs.android.build.gradle.java8)
+    } else {
+        implementation(libs.android.build.gradle.java11)
+    }
 }
 
 repositories {
     mavenLocal()
     mavenCentral()
     google()
+    maven { url = uri("https://plugins.gradle.org/m2/") }
     if (kotlinVersion.contains("eap") || kotlinVersion.contains("-")) {
         maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/temporary") }
         maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev") }
