--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,11 +1,9 @@
 plugins {
-    id "org.gradle.kotlin.kotlin-dsl" version "2.3.3"
     id "publishing"
     id "maven-publish"
     id "signing"
+    id "org.jetbrains.kotlin.jvm" version "1.7.10"
 }
-
-def kotlinVersion = libs.versions.kotlin.get()
 
 dependencies {
     implementation(libs.kover)
@@ -27,11 +25,9 @@ repositories {
     mavenCentral()
     google()
     maven { url = uri("https://plugins.gradle.org/m2/") }
-    if (kotlinVersion.contains("eap") || kotlinVersion.contains("-")) {
-        maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/temporary") }
-        maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev") }
-        maven { url = uri("https://maven.pkg.jetbrains.space/public/p/kotlinx-coroutines/maven") }
-    }
+    maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/temporary") }
+    maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev") }
+    maven { url = uri("https://maven.pkg.jetbrains.space/public/p/kotlinx-coroutines/maven") }
     maven { url = uri("https://oss.sonatype.org/content/repositories/snapshots/") }
 }
 
@@ -42,7 +38,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
-}
-java.sourceSets["main"].java {
-    srcDir("src/main/kotlinGen")
+    sourceSets.main.java {
+        srcDir("src/main/kotlinGen")
+    }
 }
