Do not use kotlin-dsl to not propagate it to the korge gradle plugin (#1203)
* Do not use kotlin-dsl to not propagate it to the korge gradle plugin

* Try to make code compatible with old and new android plugin versions

* Try to circumvent using old android plugin on java8

--- a/korge-gradle-plugin/build.gradle
+++ b/korge-gradle-plugin/build.gradle
@@ -1,16 +1,12 @@
-import org.apache.tools.ant.taskdefs.optional.unix.Symlink
-import org.gradle.api.publish.maven.internal.publication.DefaultMavenPom
-
-import java.nio.file.Files
-
 plugins {
-    id "org.gradle.kotlin.kotlin-dsl" version "2.3.3"
     id "java"
     id "java-gradle-plugin"
     id "maven-publish"
     id "com.gradle.plugin-publish"
     id "org.jetbrains.kotlin.jvm"
 }
+
+def isJava8or9 = System.getProperty("java.version").startsWith("1.8") || System.getProperty("java.version").startsWith("9")
 
 description = "Multiplatform Game Engine written in Kotlin"
 group = "com.soywiz.korlibs.korge.plugins"
@@ -63,6 +59,11 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 kotlin.sourceSets.main.each {
     it.kotlin.srcDirs(new File(buildDir, "srcgen"), new File(buildDir, "srcgen2"))
+    if (isJava8or9) {
+        it.kotlin.srcDirs(new File(buildDir, "srcgen2_8"))
+    } else {
+        it.kotlin.srcDirs(new File(buildDir, "srcgen2_11"))
+    }
 }
 java.sourceSets.main.each {
     it.resources.srcDirs(new File(buildDir, "srcgen2res"))
@@ -83,7 +84,7 @@ dependencies {
     implementation(libs.kover)
     implementation(libs.dokka)
 
-    if (System.getProperty("java.version").startsWith("1.8") || System.getProperty("java.version").startsWith("9")) {
+    if (isJava8or9) {
         implementation(libs.android.build.gradle.java8)
     } else {
         implementation(libs.android.build.gradle.java11)
