--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id "org.gradle.kotlin.kotlin-dsl" version "2.3.3"
     id "publishing"
     id "maven-publish"
     id "signing"
+    id "org.jetbrains.kotlin.jvm" version "1.7.10"
 }
 
-def kotlinVersion = libs.versions.kotlin.get()
+def isJava8or9 = System.getProperty("java.version").startsWith("1.8") || System.getProperty("java.version").startsWith("9")
 
 dependencies {
     implementation(libs.kover)
@@ -15,7 +15,7 @@ dependencies {
     implementation(libs.gson)
     implementation(libs.gradle.publish.plugin)
     implementation(libs.kotlin.gradle.plugin)
-    if (System.getProperty("java.version").startsWith("1.8") || System.getProperty("java.version").startsWith("9")) {
+    if (isJava8or9) {
         implementation(libs.android.build.gradle.java8)
     } else {
         implementation(libs.android.build.gradle.java11)
@@ -27,11 +27,9 @@ repositories {
     mavenCentral()
     google()
     maven { url = uri("https://plugins.gradle.org/m2/") }
-    if (kotlinVersion.contains("eap") || kotlinVersion.contains("-")) {
-        maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/temporary") }
-        maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev") }
-        maven { url = uri("https://maven.pkg.jetbrains.space/public/p/kotlinx-coroutines/maven") }
-    }
+    maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/temporary") }
+    maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev") }
+    maven { url = uri("https://maven.pkg.jetbrains.space/public/p/kotlinx-coroutines/maven") }
     maven { url = uri("https://oss.sonatype.org/content/repositories/snapshots/") }
 }
 
@@ -42,7 +40,12 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
-}
-java.sourceSets["main"].java {
-    srcDir("src/main/kotlinGen")
+    sourceSets.main.java {
+        srcDir("src/main/kotlinGen")
+        if (isJava8or9) {
+            srcDir("src/main/kotlin8")
+        } else {
+            srcDir("src/main/kotlin11")
+        }
+    }
 }
