--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ kotlin = "1.8.0"
 kotlinx-coroutines = "1.6.4"
 kotlinx-serialization = "1.4.1"
 kotlinx-atomicfu = "0.19.0"
+dokka = "1.7.20"
 kover = "0.6.1"
 kover-agent = "1.0.692"
 node = "16.9.1"
