--- a/settings.gradle
+++ b/settings.gradle
@@ -34,6 +34,7 @@ include(":korau")
 include(":korgw")
 include(":korvi")
 include(":korge")
+include(":kortest")
 include(":korge-gradle-plugin")
 include(":korge-reload-agent")
 include(":korge-sandbox")
