--- a/.github/workflows/RUN_WITH_CACHE_JDK17.yml
+++ b/.github/workflows/RUN_WITH_CACHE_JDK17.yml
@@ -1,4 +1,4 @@
-name: RUN_NO_CACHE_JDK17
+name: RUN_WITH_CACHE
 
 on: workflow_dispatch
 
@@ -8,9 +8,11 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
+          cache: 'gradle'
+          distribution: 'temurin'
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon -DCI=true
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishKotlinMultiplatformPublicationToMavenLocal publishJvmPublicationToMavenLocal -DCI=true
