Unify both settings.gradle & buildSrc/build.gradle with repositories defined in gradle/repositories.settings.gradle

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -22,16 +22,7 @@ dependencies {
     }
 }
 
-repositories {
-    mavenLocal()
-    mavenCentral()
-    google()
-    maven { url = uri("https://plugins.gradle.org/m2/") }
-    maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/temporary") }
-    maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev") }
-    maven { url = uri("https://maven.pkg.jetbrains.space/public/p/kotlinx-coroutines/maven") }
-    maven { url = uri("https://oss.sonatype.org/content/repositories/snapshots/") }
-}
+Eval.xy(this, this, file("../gradle/repositories.settings.gradle").text)
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.suppressWarnings = true
