--- a/buildSrc/settings.gradle
+++ b/buildSrc/settings.gradle
@@ -1,3 +1,7 @@
+pluginManagement {
+    Eval.xy(this, it, file('../gradle/repositories.settings.gradle').text)
+}
+
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
