--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,5 @@
 pluginManagement {
-	repositories {
-        mavenLocal()
-		mavenCentral()
-		gradlePluginPortal()
-        maven { url = uri("https://maven.pkg.jetbrains.space/kotlin/p/kotlin/temporary") }
-        maven { url = uri("https://maven.pkg.jetbrains.space/public/p/kotlinx-coroutines/maven") }
-        maven { url = uri("https://oss.sonatype.org/content/repositories/snapshots/") }
-	}
+    Eval.xy(this, it, file('./gradle/repositories.settings.gradle').text)
 }
 
 rootProject.name = "${rootDir.name}-root"
