--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -177,6 +177,7 @@ jobs:
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
+      - { name: Testing JVM on Linux, run: ./gradlew jvmTest }
       - { name: Testing Kotlin/Native Linux, run: ./gradlew linuxX64Test }
       - { name: Publish gradle plugin, run: "./gradlew :korge-gradle-plugin:publishToMavenLocal" }
       - { name: Publish X64, run: ./gradlew publishLinuxX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
@@ -194,6 +195,7 @@ jobs:
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
+      - { name: Testing JVM on MacosX64, run: ./gradlew jvmTest }
       - { name: Testing Kotlin/Native MacosX64, run: ./gradlew macosX64Test }
       - { name: Publish gradle plugin, run: "./gradlew :korge-gradle-plugin:publishToMavenLocal" }
       - { name: Publish X64, run: ./gradlew publishMacosX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
@@ -212,6 +214,7 @@ jobs:
       - { uses: actions/checkout@v1 }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
+      - { name: Testing JVM on windows, shell: cmd, run: CALL gradlew.bat jvmTest }
       - { name: Testing Kotlin/Native MingwX64Test, shell: cmd, run: CALL gradlew.bat mingwX64Test }
       - { name: Publish gradle plugin, shell: cmd, run: "CALL gradlew.bat :korge-gradle-plugin:publishToMavenLocal" }
       - { name: Publish X64, shell: cmd, run: CALL gradlew.bat publishMingwX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
