Do not include BuildVersions in commits by generating them in buildSrc/build.gradle instead in groovy

--- a/gradle.properties
+++ b/gradle.properties
@@ -70,4 +70,4 @@ kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 # https://kotlinlang.org/docs/whatsnew17.html#a-new-approach-to-incremental-compilation
 kotlin.incremental.useClasspathSnapshot=true
 
-kotlin.build.report.output=file
+#kotlin.build.report.output=file
