--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -212,6 +212,8 @@ jobs:
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dkotlin.compiler.execution.strategy=in-process -Dorg.gradle.workers.max=3
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Download, shell: cmd, run: "curl -L -o opengl32-x64.zip https://github.com/korlibs/mesa-dist-win/releases/download/21.2.3/opengl32-x64.zip" }
+      - { name: unzip, shell: cmd, run: "unzip opengl32-x64.zip" }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Testing JVM on windows, shell: cmd, run: CALL gradlew.bat jvmTest }
