--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -161,7 +161,7 @@ jobs:
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
-      - { name: Check compilation of iOS targets, run: ./gradlew publishIosArm64PublicationToMavenLocal publishIosArm32PublicationToMavenLocal publishIosX64PublicationToMavenLocal }
+      - { name: Check compilation of iOS targets, run: ./gradlew publishIosArm64PublicationToMavenLocal publishIosX64PublicationToMavenLocal }
       - { name: Run ios simulator tests, run: ./gradlew iosX64Test }
 
 
