Update to ktruth

--- a/settings.gradle
+++ b/settings.gradle
@@ -34,7 +34,7 @@ include(":korau")
 include(":korgw")
 include(":korvi")
 include(":korge")
-include(":kortest")
+include(":ktruth")
 include(":korge-gradle-plugin")
 include(":korge-reload-agent")
 include(":korge-sandbox")
