Korge multiplatform testing library. (#1244)
* Korge multiplatform testing library.

* I think this fixes android errors.

* Update to ktruth

---------

Co-authored-by: Xeno <xenotactic.game@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,7 @@ include(":korim")
 include(":korau")
 include(":korgw")
 include(":korge")
+include(":ktruth")
 include(":korge-gradle-plugin")
 include(":korge-reload-agent")
 include(":korge-sandbox")
