--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ kotlin = "1.8.10"
 kotlinx-coroutines = "1.6.4"
 kotlinx-serialization = "1.5.0-RC"
 kotlinx-atomicfu = "0.19.0"
+kotlinx-benchmark = "0.4.7"
 dokka = "1.7.20"
 kover = "0.6.1"
 kover-agent = "1.0.692"
