--- a/settings.gradle
+++ b/settings.gradle
@@ -31,5 +31,5 @@ include(":korge-reload-agent")
 include(":korge-sandbox")
 
 if (!inCI) {
-    // include(":korge-benchmarks")
+    include(":korge-benchmarks")
 }
