--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -29,8 +29,8 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
     sourceSets.main.java {
         srcDir("src/main/kotlinGen")
         if (isJava8or9) {
