--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -28,9 +28,15 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.suppressWarnings = true
 }
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile.class).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
     sourceSets.main.java {
         srcDir("src/main/kotlinGen")
         if (isJava8or9) {
