--- a/.github/workflows/PROJECT_ASSIGN.yml
+++ b/.github/workflows/PROJECT_ASSIGN.yml
@@ -10,7 +10,7 @@ jobs:
     name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/add-to-project@28a69b27b6aeac5640d0022eaccff9a372c813bb
+      - uses: actions/add-to-project@v0.4.0
         with:
           # You can target a repository in a different organization
           # to the issue
