--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -85,7 +85,7 @@ jobs:
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
-    - { name: Testing JVM, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew jvmTest } }
+    - { name: Testing JVM, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew jvmTest } }
     - { name: Check sandbox compiles, run: "./gradlew :korge-sandbox:jvmJar" }
     - { name: Publish to maven local, run: ./gradlew publishJvmLocal }
     - { name: e2e test, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace } }
