--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -180,7 +180,7 @@ jobs:
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
-      - { name: Testing JVM on Linux, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew jvmTest } }
+      - { name: Testing JVM on Linux, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew jvmTest } }
       - { name: Testing Kotlin/Native Linux, run: ./gradlew linuxX64Test }
       - { name: Publish gradle plugin, run: "./gradlew :korge-gradle-plugin:publishToMavenLocal" }
       - { name: Publish X64, run: ./gradlew publishLinuxX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
