--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -107,7 +107,7 @@ jobs:
       #  with:
       #    name: coverage-results
       #    path: build/reports/kover/merged/html/
-      - { name: Kover Merged XML Reports, run: ./gradlew koverMergedXmlReport }
+      - { name: Kover Merged XML Reports, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew koverMergedXmlReport } }
       - uses: codecov/codecov-action@v3
         with:
           files: ./build/reports/kover/merged/xml/report.xml
