--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -14,6 +14,7 @@ env:
   CI: true
   SKIP_KORGE_SAMPLES: true
   ANDROID_TESTS: true
+  DISPLAY: ":99"
 
 jobs:
   changes:
@@ -80,15 +81,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - { uses: actions/checkout@v3 }
+    - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
+    - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
     - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
-    - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
-    - { name: Testing JVM, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew jvmTest } }
+    - { name: Testing JVM, run: ./gradlew jvmTest }
+    #- { name: Testing JVM, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew jvmTest } }
     - { name: Check sandbox compiles, run: "./gradlew :korge-sandbox:jvmJar" }
     - { name: Publish to maven local, run: ./gradlew publishJvmLocal }
-    - { name: e2e test, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace } }
+    - { name: e2e test, working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace }
+    #- { name: e2e test, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace } }
 
   test-coverage:
     needs: changes
@@ -97,8 +101,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
+      - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
-      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
@@ -107,7 +112,8 @@ jobs:
       #  with:
       #    name: coverage-results
       #    path: build/reports/kover/merged/html/
-      - { name: Kover Merged XML Reports, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew koverMergedXmlReport } }
+      #- { name: Kover Merged XML Reports, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew koverMergedXmlReport } }
+      - { name: Kover Merged XML Reports, run: ./gradlew koverMergedXmlReport }
       - uses: codecov/codecov-action@v3
         with:
           files: ./build/reports/kover/merged/xml/report.xml
@@ -175,8 +181,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
+      - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
-      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
@@ -185,7 +192,7 @@ jobs:
       - { name: Publish gradle plugin, run: "./gradlew :korge-gradle-plugin:publishToMavenLocal" }
       - { name: Publish X64, run: ./gradlew publishLinuxX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
       - { name: Stop gradle daemon, run: ./gradlew --stop }
-      - { name: e2e test native, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesNative --stacktrace } }
+      - { name: e2e test native, working-directory: e2e-test, run: ./gradlew checkReferencesNative --stacktrace }
 
   test-native-macos:
     needs: changes
