--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -99,6 +99,8 @@ jobs:
     if: ${{ needs.changes.outputs.testJvm == 'true' }}
     timeout-minutes: 120
     runs-on: ubuntu-latest
+    env:
+      DISABLE_HEADLESS_TEST: true
     steps:
       - { uses: actions/checkout@v3 }
       - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
@@ -199,6 +201,8 @@ jobs:
     if: ${{ needs.changes.outputs.testMacos == 'true' }}
     timeout-minutes: 120
     runs-on: macos-11
+    env:
+      DISABLE_HEADLESS_TEST: true
     steps:
       - { uses: actions/checkout@v3 }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
@@ -218,6 +222,7 @@ jobs:
     timeout-minutes: 120
     runs-on: windows-latest
     env:
+      DISABLE_HEADLESS_TEST: true
       DISABLE_JAVASCRIPT_TEST: true
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dkotlin.compiler.execution.strategy=in-process -Dorg.gradle.workers.max=3
     steps:
