--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -14,6 +14,7 @@ env:
   CI: true
   SKIP_KORGE_SAMPLES: true
   ANDROID_TESTS: true
+  DISPLAY: ":99"
 
 jobs:
   changes:
@@ -81,12 +82,13 @@ jobs:
     steps:
     - { uses: actions/checkout@v3 }
     - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
+    - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
     - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
     - { name: Building classes, run: ./gradlew compileTestKotlinJvm }
-    - { name: Testing JVM, run: "xvfb-run --auto-servernum -e /dev/stdout ./gradlew jvmTest" }
+    - { name: Testing JVM, run: "./gradlew jvmTest" }
     - { name: Check sandbox compiles, run: "./gradlew :korge-sandbox:jvmJar" }
     - { name: Publish to maven local, run: ./gradlew publishJvmLocal }
     - { name: e2e test, working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace }
