--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -222,7 +222,6 @@ jobs:
     timeout-minutes: 120
     runs-on: windows-latest
     env:
-      DISABLE_HEADLESS_TEST: true
       DISABLE_JAVASCRIPT_TEST: true
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dkotlin.compiler.execution.strategy=in-process -Dorg.gradle.workers.max=3
     steps:
@@ -232,7 +231,7 @@ jobs:
       - { name: unzip to korge, shell: cmd, run: "unzip opengl32-x64.zip -d korge" }
       - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
-      - { name: Testing JVM on windows, shell: cmd, run: CALL gradlew.bat jvmTest }
+      - { name: Testing JVM on windows, shell: cmd, run: "CALL gradlew.bat jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
       - { name: Testing Kotlin/Native MingwX64Test, shell: cmd, run: CALL gradlew.bat mingwX64Test }
       - { name: Publish gradle plugin, shell: cmd, run: "CALL gradlew.bat :korge-gradle-plugin:publishToMavenLocal" }
       - { name: Publish X64, shell: cmd, run: CALL gradlew.bat publishMingwX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
