Small updates to use local kotlin version for experiments

--- a/gradle.properties
+++ b/gradle.properties
@@ -71,3 +71,6 @@ kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 kotlin.incremental.useClasspathSnapshot=true
 
 #kotlin.build.report.output=file
+
+kotlin.native.home=/Users/soywiz/projects/kotlin/kotlin-native/dist
+
