--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -20,10 +20,7 @@ jobs:
       stagedRepositoryId: ${{ steps.createStagedRepositoryId.outputs.stagedRepositoryId }}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: sudo apt-get install xvfb
       - id: createStagedRepositoryId
         run: xvfb-run --auto-servernum ./gradlew --no-daemon startReleasingMavenCentral
@@ -35,10 +32,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: CALL gradlew.bat --no-daemon checkReleasingMavenCentral publishMingwX64PublicationToMavenRepository
         shell: cmd
         env:
@@ -51,10 +45,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishMacosX64PublicationToMavenRepository publishMacosArm64PublicationToMavenRepository
         env:
@@ -66,10 +57,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishIosArm64PublicationToMavenRepository publishIosX64PublicationToMavenRepository publishIosSimulatorArm64PublicationToMavenRepository
         env:
@@ -81,10 +69,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishTvosX64PublicationToMavenRepository publishTvosArm64PublicationToMavenRepository publishTvosSimulatorArm64PublicationToMavenRepository
         env:
@@ -96,10 +81,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishWatchosX64PublicationToMavenRepository publishWatchosArm64PublicationToMavenRepository publishWatchosSimulatorArm64PublicationToMavenRepository
         env:
@@ -111,10 +93,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishKotlinMultiplatformPublicationToMavenRepository publishJvmPublicationToMavenRepository
@@ -125,10 +104,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishJsPublicationToMavenRepository publishAndroidPublicationToMavenRepository
@@ -139,10 +115,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishLinuxX64PublicationToMavenRepository
@@ -154,8 +127,5 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
       - run: ./gradlew releaseMavenCentral
