--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -7,6 +7,10 @@ plugins {
 
 def isJava8or9 = System.getProperty("java.version").startsWith("1.8") || System.getProperty("java.version").startsWith("9")
 
+if (isJava8or9) {
+    throw new Exception("At least Java 11 is required")
+}
+
 dependencies {
     implementation(libs.kover)
     implementation(libs.dokka)
@@ -15,11 +19,7 @@ dependencies {
     implementation(libs.gson)
     implementation(libs.gradle.publish.plugin)
     implementation(libs.kotlin.gradle.plugin)
-    if (isJava8or9) {
-        implementation(libs.android.build.gradle.java8)
-    } else {
-        implementation(libs.android.build.gradle.java11)
-    }
+    implementation(libs.android.build.gradle)
 }
 
 Eval.xy(this, this, file("../gradle/repositories.settings.gradle").text)
@@ -39,11 +39,6 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
     sourceSets.main.java {
         srcDir("src/main/kotlinGen")
-        if (isJava8or9) {
-            srcDir("src/main/kotlin8")
-        } else {
-            srcDir("src/main/kotlin11")
-        }
     }
 }
 
@@ -81,7 +76,7 @@ object BuildVersions {
     const val NODE_JS = "${libs.versions.node.get()}"
     const val JNA = "${libs.versions.jna.get()}"
     const val COROUTINES = "${libs.versions.kotlinx.coroutines.get()}"
-    const val ANDROID_BUILD = "${isJava8or9 ? libs.versions.android.build.gradle.java8.get() : libs.versions.android.build.gradle.java11.get()}"
+    const val ANDROID_BUILD = "${libs.versions.android.build.gradle.get()}"
     const val KOTLIN_SERIALIZATION = "${libs.versions.kotlinx.serialization.get()}"
     const val KRYPTO = "$projectVersion"
     const val KLOCK = "$projectVersion"
