Some version adjustments

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -30,13 +30,14 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile.class).configureEach {
     kotlinOptions {
-        jvmTarget = "1.8"
+        //jvmTarget = "1.8"
+        jvmTarget = "11"
     }
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
     sourceSets.main.java {
         srcDir("src/main/kotlinGen")
     }
