--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 jna = "5.13.0"
 jcodec = "0.2.5"
 proguard-gradle = "7.2.2"
+#kotlin = "1.8.20-Beta"
 kotlin = "1.8.10"
 #kotlin = "1.8.255-SNAPSHOT"
 kotlinx-coroutines = "1.6.4"
@@ -12,7 +13,10 @@ dokka = "1.7.20"
 kover = "0.6.1"
 kover-agent = "1.0.692"
 node = "16.9.1"
-android-build-gradle = "7.0.4"
+#android-build-gradle = "7.4.1"
+#android-build-gradle = "7.4.0-beta02"
+android-build-gradle = "7.3.1"
+#android-build-gradle = "8.1.0-alpha04"
 gson = "2.8.6"
 gradle-publish-plugin = "1.1.0"
 #gradle-publish-plugin = "0.14.0"
