--- a/gradle.properties
+++ b/gradle.properties
@@ -70,4 +70,6 @@ kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 # https://kotlinlang.org/docs/whatsnew17.html#a-new-approach-to-incremental-compilation
 kotlin.incremental.useClasspathSnapshot=true
 
+android.disableAutomaticComponentCreation=true
+
 #kotlin.build.report.output=file
