Refactor bus stuff to it's own libary.

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ include(":kbignum")
 include(":klock")
 include(":klogger")
 include(":korinject")
+include(":korbus")
 include(":kmem")
 include(":kds")
 include(":korma")
