--- a/settings.gradle
+++ b/settings.gradle
@@ -30,6 +30,7 @@ include(":korge-gradle-plugin")
 include(":korge-reload-agent")
 include(":korge-sandbox")
 
-if (!inCI || System.getenv("ENABLE_BENCHMARKS") == "true") {
+//if (!inCI || System.getenv("ENABLE_BENCHMARKS") == "true") {
+if (System.getenv("ENABLE_BENCHMARKS") == "true") {
     include(":korge-benchmarks")
 }
