--- a/settings.gradle
+++ b/settings.gradle
@@ -11,8 +11,6 @@ boolean isPropertyTrue(String name) {
 boolean inCI = isPropertyTrue("CI")
 boolean disabledExtraKorgeLibs = isPropertyTrue("DISABLED_EXTRA_KORGE_LIBS")
 
-include(":graphics:foundation")
-include(":graphics:backend:metal")
 include(":kbignum")
 include(":klock")
 include(":klogger")
@@ -31,6 +29,7 @@ include(":ktruth")
 include(":korge-gradle-plugin")
 include(":korge-reload-agent")
 include(":korge-sandbox")
+include(":osx-metal-playground")
 
 //if (!inCI || System.getenv("ENABLE_BENCHMARKS") == "true") {
 if (System.getenv("ENABLE_BENCHMARKS") == "true") {
